...
            Text(text = "Email: ${collector.email}", style = MaterialTheme.typography.bodyMedium)
        }
        Button(
            onClick = onVerClick,
            colors = ButtonDefaults.buttonColors(containerColor = Color.Black)
        ) {
            Text("Ver")
        }
    }
}
