...
                TopAppBar(
                        title = { Text("Álbumes", fontWeight = FontWeight.Bold) },
                        actions = {
                            IconButton(onClick = { navController.navigate("albumes/create") }) {
                                Icon(
                                        imageVector = Icons.Rounded.AddCircle,
                                        contentDescription = "Agregar álbum",
                                        modifier = Modifier.size(size = 36.dp),
                                        tint = Color.Black
                                )
                            }
                        }
                )
...
