...
                                    selectedTextColor = Color.Black,
                                    indicatorColor = Color.LightGray,
                                    unselectedIconColor = Color.DarkGray,
                                    unselectedTextColor = Color.DarkGray
                            ),
                    icon = {
                        Icon(Icons.Filled.Star, contentDescription = "Artists", tint = Color.Black)
                    },
                    alwaysShowLabel = true
            )

            NavigationBarItem(
                    selected =
...
                                    unselectedIconColor = Color.DarkGray,
                                    unselectedTextColor = Color.DarkGray
                            ),
                    icon = {
                        Icon(
                                Icons.Filled.Group,
                                contentDescription = "Collectors",
                                tint = Color.Black
                        )
                    },
                    alwaysShowLabel = true
            )
        }
...
